--- a/School/project1/stylistisch.css
+++ b/School/project1/stylistisch.css
@@ -2,20 +2,34 @@ body{
     background-color: black;
     overflow: hidden;
 }
+
 #sidebar{
-    position: relative;
-    border: 1px solid red;
+    position: fixed;
+    left: 0px;
+    top: 0px;
     box-sizing: border-box;
-    margin-left: -1.2vh;
-    width: 7vh;
-    height: 100.2vh;
-    margin-top: -1vh;
+    width: 4.5vw;
+    height: 101vh;
+    background-color: rgb(63, 63, 63);
 }
 
 #content{
-    border: 1px solid blue;
+    position: fixed;
+    right: 0px;
+    top: 0px;
     box-sizing: border-box;
-    margin-left: 5.7vh;
-    margin-top: -100.2vh;
-    height: 100.2vh;
+    height: 100vh;
+    width: 95.5vw;
+}
+
+#plus_button{
+    all:unset;
+}
+
+#plus_img{
+    position: fixed;
+    top: 1vh;
+    left: -0.3vw;
+    width: 5vw;
+    height: 5vh;
 }
